refactor: 去掉了一些不必要的复用，统一了一些逻辑